kyverno-networkpolicy-training/code/kyverno-ops/tag13/tenant-d.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-d
  labels: {guard-lab: demo, team: tenant-d, tenant: d}
